# RepoCheck

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
repocheck/: __main__.py  cli.py  core.py
tests/: test_cli.py
tests/_tmp_output/: report.html  report.json
tests/fixtures/recipe_gap_project/: README.md  train.py
tests/fixtures/recipe_gap_project/configs/: base.yaml
tests/fixtures/sample_project/: README.md  train.py
tests/fixtures/sample_project/configs/: base.yaml
tests/fixtures/sample_project/scripts/: train.sh
